<resources>
    <string name="app_name">Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name :</string>
    <string name="number_of_tasks">Number of tasks :</string>
    <string name="made">Made</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_number_of_tasks">Enter number of tasks</string>
</resources>