<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="50dp"
    tools:context=".controller.fragment.NumberOfTasksFragment">
    <TextView
        android:textSize="18sp"

        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"/>

    <com.google.android.material.textfield.TextInputLayout
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/enter_your_name"

        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_numberOfTasks_name"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:textStyle="bold"
android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_of_tasks"/>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_number_of_tasks"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black" >
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="number"
            android:id="@+id/edt_numberOfTasks_numberOfTasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_numberOfTasks_made"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/made" />

</LinearLayout>